--- a/releases/ghost.yaml
+++ b/releases/ghost.yaml
@@ -2,20 +2,20 @@
 apiVersion: flux.weave.works/v1beta1
 kind: HelmRelease
 metadata:
-  name: bluegreen
-  namespace: bluegreen
+  name: ghost
+  namespace: demonew
   annotations:
     flux.weave.works/automated: "false"
     flux.weave.works/tag.chart-image: glob:1.21.*
 spec:
-  releaseName: bluegreen
+  releaseName: ghost
   chart:
-    git: ssh://git@github.com/hasindum/bluegreenconfig
+    git: ssh://git@github.com/weaveworks/flux-get-started
     ref: master
-    path: charts/bluegreen
+    path: charts/ghost
   values:
-    deployment:
-      image: nginx:stable
+    image: bitnami/ghost:1.21.6-r0
+    ghostPort: 85
     persistence:
       enabled: false
     resources:
@@ -23,3 +23,6 @@ spec:
         memory: 32Mi
         cpu: 10m
     serviceType: ClusterIP
+    mariadb:
+      persistence:
+        enabled: false
