--- a/charts/bluegreen/templates/deployment-blue.yaml
+++ b/charts/bluegreen/templates/deployment-blue.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: {{ template "blue-green.name" . }}-blue
-          image:  nginx:stable
+          image:  "{{ .Values.deployment.image }}"
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
