automate image pull

--- a/releases/bluegreen.yaml
+++ b/releases/bluegreen.yaml
@@ -5,8 +5,8 @@ metadata:
   name: bluegreen
   namespace: bluegreen
   annotations:
-    flux.weave.works/automated: "false"
-    flux.weave.works/tag.chart-image: glob:1.21.*
+    flux.weave.works/automated: "true"
+    flux.weave.works/tag.chart-image: hazzindu/nginx:1.0.*
 spec:
   releaseName: bluegreen
   chart:
