--- a/charts/bluegreen/templates/deployment-green.yaml
+++ b/charts/bluegreen/templates/deployment-green.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: {{ template "blue-green.name" . }}-green
-          image: "{{ .Values.deployment.image }}"
+          image: "{{ .Values.image }}"
           imagePullPolicy: Always
           ports:
             - name: http
