--- a/releases/bluegreen.yaml
+++ b/releases/bluegreen.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: bluegreen
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.chart-image: glob:1.0.*
+    flux.weave.works/tag.chart-image: glob:dev-*
 spec:
   releaseName: bluegreen
   chart:
@@ -14,7 +14,7 @@ spec:
     ref: master
     path: charts/bluegreen
   values:
-    image: hazzindu/nginx:1.0.0
+    image: hazzindu/nginx:dev-1.0.0
     persistence:
       enabled: false
     resources:
