--- a/charts/bluegreen/templates/deployment-green.yaml
+++ b/charts/bluegreen/templates/deployment-green.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: {{ template "blue-green.name" . }}-green
           image: "{{ .Values.image }}"
-          imagePullPolicy: Always
+          imagePullPolicy: "{{ .Values.imagePullPolicy }}"
           ports:
             - name: http
               containerPort: 80
