--- a/releases/bluegreen.yaml
+++ b/releases/bluegreen.yaml
@@ -3,7 +3,7 @@ apiVersion: flux.weave.works/v1beta1
 kind: HelmRelease
 metadata:
   name: bluegreen
-  namespace: default
+  namespace: bluegreen
   annotations:
     flux.weave.works/automated: "true"
     flux.weave.works/tag.chart-image: semver:~1.0
@@ -14,7 +14,7 @@ spec:
     ref: master
     path: charts/bluegreen
   values:
-    image: hazzindu/bluegreen:1.0.6
+    image: hazzindu/bluegreen:1.0.5
     deployment:
       # method: rolling-upgrade
       method: bluegreen
