--- a/releases/bluegreen.yaml
+++ b/releases/bluegreen.yaml
@@ -3,7 +3,7 @@ apiVersion: flux.weave.works/v1beta1
 kind: HelmRelease
 metadata:
   name: bluegreen
-  namespace: bluegreen
+  namespace: sampleapp
   annotations:
     flux.weave.works/automated: "true"
     flux.weave.works/tag.chart-image: semver:~1.0
