--- a/releases/bluegreen.yaml
+++ b/releases/bluegreen.yaml
@@ -16,9 +16,9 @@ spec:
   values:
     image: hazzindu/bluegreen:1.0.8
     deployment:
-      method: rolling-upgrade
-      # method: bluegreen
-      # active: blue
+      # method: rolling-upgrade
+      method: bluegreen
+      active: blue
     persistence:
       enabled: false
     resources:
