--- a/charts/bluegreen/templates/deployment-blue.yaml
+++ b/charts/bluegreen/templates/deployment-blue.yaml
@@ -19,7 +19,12 @@ spec:
     spec:
       containers:
         - name: {{ template "blue-green.name" . }}-blue
+          {{- if eq .Values.deployment.active "blue"}}
+          image: "{{ .Values.deployment.activeImage }}"
+          {{- end}}
+          {{- if eq .Values.deployment.active "green"}}
           image: "{{ .Values.image }}"
+          {{- end}}
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
