--- a/charts/bluegreen/templates/deployment-green.yaml
+++ b/charts/bluegreen/templates/deployment-green.yaml
@@ -19,7 +19,12 @@ spec:
     spec:
       containers:
         - name: {{ template "blue-green.name" . }}-green
+          {{- if eq .Values.deployment.active "green"}}
+          image: "{{ .Values.deployment.activeImage }}"
+          {{- end}}
+          {{- if eq .Values.deployment.active "blue"}}
           image: "{{ .Values.image }}"
+          {{- end}}
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
