--- a/charts/bluegreen/values.yaml
+++ b/charts/bluegreen/values.yaml
@@ -5,12 +5,13 @@
 replicaCount: 2
 namespace: sampleapp
 
-image: hazzindu/nginx:1.0.0
+image: hazzindu/bluegreen:1.0.2
 
 deployment:
   method: rolling-upgrade
 #  method: bluegreen
-#  active: green
+#  active: blue
+#  activeImage: hazzindu/bluegreen:1.0.1
 
 ingress:
   strategicDomain: 
