--- a/releases/bluegreen.yaml
+++ b/releases/bluegreen.yaml
@@ -14,7 +14,7 @@ spec:
     ref: master
     path: charts/bluegreen
   values:
-    $image
+    image: hazzindu/bluegreen:1.0.5
     deployment:
       # method: rolling-upgrade
       method: bluegreen
