--- a/charts/bluegreen/templates/service-blue.yaml
+++ b/charts/bluegreen/templates/service-blue.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.deployment.method "bluegreen"}}
+{{- if eq .Values.service.deployment.method "bluegreen"}}
 {{- $fullName := .Release.Name -}}
 apiVersion: v1
 kind: Service
