--- a/releases/bluegreen.yaml
+++ b/releases/bluegreen.yaml
@@ -14,17 +14,19 @@ spec:
     ref: master
     path: charts/bluegreen
   values:
-    image: hazzindu/bluegreen:1.0.16
-
-    deployment:
-      # method: rolling-upgrade
-      method: bluegreen
-      active: blue
-      activeImage: hazzindu/bluegreen:1.0.8
-    persistence:
-      enabled: false
-    resources:
-      requests:
-        memory: 32Mi
-        cpu: 10m
-    serviceType: ClusterIP
+    service:
+    - name: service1
+      image: hazzindu/bluegreen:1.0.16
+      deployment:
+        # method: rolling-upgrade
+        method: bluegreen
+        active: blue
+        activeImage: hazzindu/bluegreen:1.0.8
+      persistence:
+        enabled: false
+      resources:
+        requests:
+          memory: 32Mi
+          cpu: 10m
+      serviceType: ClusterIP
+      
