--- a/charts/bluegreen/values.yaml
+++ b/charts/bluegreen/values.yaml
@@ -7,11 +7,13 @@ namespace: tiller-world
 
 image: hazzindu/bluegreen:1.0.2
 
-deployment:
-  # method: rolling-upgrade
- method: bluegreen
- active: blue
- activeImage: hazzindu/bluegreen:1.0.8
+services:
+- name: service1
+  deployment:
+    # method: rolling-upgrade
+  method: bluegreen
+  active: blue
+  activeImage: hazzindu/bluegreen:1.0.8
 
 ingress:
   strategicDomain: 
