--- a/charts/bluegreen/templates/deployment-rolling-upgrade.yaml
+++ b/charts/bluegreen/templates/deployment-rolling-upgrade.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.deployment.method "rolling-upgrade"}}
+{{- if eq .Values.service.deployment.method "rolling-upgrade"}}
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: {{ template "blue-green.name" . }}
-          image: "{{ .Values.image }}"
+          image: "{{ .Values.service.image }}"
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
