--- a/charts/bluegreen/values.yaml
+++ b/charts/bluegreen/values.yaml
@@ -3,17 +3,8 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 2
-namespace: tiller-world
+namespace: tiller-worldpvt
 
-<<<<<<< HEAD
-image: hazzindu/bluegreen:1.0.15
-
-deployment:
- # method: rolling-upgrade
-  method: bluegreen
-  active: green
-  activeImage: hazzindu/bluegreen:1.0.15
-=======
 image: hazzindu/bluegreen:1.0.15
 
 deployment:
@@ -21,7 +12,6 @@ deployment:
  method: bluegreen
  active: blue
  activeImage: hazzindu/bluegreen:1.0.15
->>>>>>> 8fce78b6c24aec8fa6e44db4d6aff53a5227a8e5
 
 ingress:
   strategicDomain: 
