--- a/releases/bluegreen.yaml
+++ b/releases/bluegreen.yaml
@@ -3,7 +3,7 @@ apiVersion: flux.weave.works/v1beta1
 kind: HelmRelease
 metadata:
   name: bluegreen
-  namespace: tiller-world
+  namespace: tiller-worldpvt
   annotations:
     flux.weave.works/automated: "false"
     flux.weave.works/tag.chart-image: semver:~1.0
