--- a/charts/bluegreen/values.yaml
+++ b/charts/bluegreen/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 2
-namespace: tiller-worldpvt
+namespace: tiller-world
 
 image: hazzindu/bluegreen:1.0.15
 
